--- a/Pages/Productlist.html
+++ b/Pages/Productlist.html
@@ -28,12 +28,17 @@
           <a href="#">watch's</a>
       </nav>
       <div class="search_bar">
-        <span class="material-symbols-outlined search_icon">search</span>
-        <input
-          class="search_input"
-          placeholder="Search for products, brands and more" />
-      </div>
-      <div class="action_bar">
+  <span
+    class="material-symbols-outlined search_icon"
+    id="searchBtn"
+  >search</span>
+
+  <input
+    id="searchInput"
+    class="search_input"
+    placeholder="Search for products, brands and more" />
+</div>
+        <div class="action_bar">
         <div class="action_container">
           <span class="material-symbols-outlined action_icon">person</span>
           <span class="action_name">Profile</span>
